--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -1,13 +1,13 @@
 ---
-- name: Ensure crio_version has a 'v' prefix
+- name: Dependencies | Ensure crio_version has a 'v' prefix
   set_fact:
     crio_version: "{{ crio_version if crio_version | regex_search('^v') else 'v' + crio_version }}"
 
-- name: Ensure crio_version has a 'v' prefix
+- name: Dependencies | Ensure crio_version has a 'v' prefix
   set_fact:
     kubernetes_version: "{{ kubernetes_version if kubernetes_version | regex_search('^v') else 'v' + kubernetes_version }}"
 
-- name: Add Kubernetes repository
+- name: Dependencies | Add Kubernetes repository
   ansible.builtin.yum_repository:
     name: kubernetes
     description: Kubernetes Repository
@@ -16,7 +16,12 @@
     enabled: true
     gpgcheck: false
 
-- name: Add cri-o repository
+# - name: Dependencies | Remote RPM install with yum
+#   ansible.builtin.yum: 
+#     name: http://example.com/some_package.rpm
+#     state: present
+
+- name: Dependencies | Add cri-o repository
   ansible.builtin.yum_repository:
     name: cri-o
     description: Cri-o Repository
@@ -25,7 +30,7 @@
     enabled: true
     gpgcheck: false
 
-- name: Install cri-o, kubeadm, kubelet, kubectl
+- name: Dependencies | Install cri-o, kubeadm, kubelet, kubectl
   ansible.builtin.yum:
     name:
       - cri-o
@@ -34,14 +39,14 @@
       - kubectl
     state: present
 
-- name: Configure crio conf
+- name: Dependencies | Configure crio conf
   block:
-    - name: Check if [crio.image] section exists
+    - name: Dependencies | Check if [crio.image] section exists
       ansible.builtin.command: grep -q '^\[crio.image\]' "{{ crio_config_file_path }}"
       register: crio_image_section_check
       failed_when: false
 
-    - name: Insert pause_image line if [crio.image] section exists
+    - name: Dependencies | Insert pause_image line if [crio.image] section exists
       ansible.builtin.lineinfile:
         path: "{{ crio_config_file_path }}"
         regexp: 'pause_image\s*='
@@ -50,7 +55,7 @@
       when:
         - crio_image_section_check.rc == 0
 
-    - name: Insert [crio.image] section and pause_image line if [crio.image] section does not exist
+    - name: Dependencies | Insert [crio.image] section and pause_image line if [crio.image] section does not exist
       ansible.builtin.blockinfile:
         path: "{{ crio_config_file_path }}"
         block: |
@@ -60,15 +65,15 @@
       when:
         - crio_image_section_check.rc != 0
 
-- name: Delete /24 subnets
+- name: Dependencies | Delete /24 subnets
   block:
-    - name: Remove the subnet lines with /24 mask
+    - name: Dependencies | Remove the subnet lines with /24 mask
       ansible.builtin.replace:
         path: "{{ crio_subnet_config_path }}"
         regexp: ',\n\s*\[{ "subnet": "10\.\d{1,3}\.\d{1,3}\.\d{1,3}/24" }\],?'
         replace: ''
 
-- name: Enable cri-o and kubelet services
+- name: Dependencies | Enable cri-o and kubelet services
   ansible.builtin.systemd:
     name: "{{ item }}"
     enabled: true
@@ -76,10 +81,10 @@
     - crio
     - kubelet
 
-- name: Load br_netfilter module
+- name: Dependencies | Load br_netfilter module
   ansible.builtin.command: modprobe br_netfilter
 
-- name: Ensure net.ipv4.ip_forward is set in sysctl.conf
+- name: Dependencies | Ensure net.ipv4.ip_forward is set in sysctl.conf
   ansible.builtin.lineinfile:
     path: /etc/sysctl.conf
     line: '{{ item }}'
@@ -89,34 +94,34 @@
     - 'net.bridge.bridge-nf-call-ip6tables=1'
     - 'fs.may_detach_mounts=1'
 
-- name: Applying
+- name: Dependencies | Applying
   ansible.builtin.command: sysctl -p
 
-- name: Turn off all swap spaces
+- name: Dependencies | Turn off all swap spaces
   ansible.builtin.command: swapoff -a
 
-- name: Remove swap entries from /etc/fstab
+- name: Dependencies | Remove swap entries from /etc/fstab
   ansible.builtin.lineinfile:
     path: /etc/fstab
     regexp: '^\s*[^#].*\s+swap\s+'
     state: absent
     backup: true
 
-- name: Ensure swap is disabled in the current session
+- name: Dependencies | Ensure swap is disabled in the current session
   ansible.builtin.command: free -m
   register: free_output
 
-- name: Display current swap status
+- name: Dependencies | Display current swap status
   ansible.builtin.debug:
     msg: "{{ free_output.stdout_lines }}"
 
-- name: Reload systemd manager configuration
+- name: Dependencies | Reload systemd manager configuration
   ansible.builtin.command: systemctl daemon-reload
 
-- name: Remount all filesystems
+- name: Dependencies | Remount all filesystems
   ansible.builtin.command: mount -a
 
-- name: Create /var/lib/containers directory
+- name: Dependencies | Create /var/lib/containers directory
   ansible.builtin.file:
     path: /var/lib/containers
     state: directory
@@ -124,7 +129,7 @@
     owner: root
     group: root
 
-- name: Ensure CRI-O service is started
+- name: Dependencies | Ensure CRI-O service is started
   ansible.builtin.systemd:
     name: crio
     state: started
