--- a/inverntory.ini
+++ b/inverntory.ini
@@ -1,18 +1,32 @@
-[all:vars]
+[init-master:vars]
+ansible_connection=ssh
+ansible_ssh_user=root
+ansible_ssh_pass=vagrant
+host_key_checking = false
+
+[masters:vars]
+ansible_connection=ssh
+ansible_ssh_user=root
+ansible_ssh_pass=vagrant
+host_key_checking = false
+
+[workers:vars]
 ansible_connection=ssh
 ansible_ssh_user=vagrant
 ansible_ssh_pass=vagrant
 host_key_checking = false
 
 [init-master]
-master1 ansible_host=192.168.0.141
+master01 ansible_host=192.168.0.116
 
 [masters]
+master01 ansible_host=192.168.0.116
+; master02 ansible_host=192.168.0.130
+; master03 ansible_host=192.168.0.131
 
 
 ; master2 ansible_host=192.168.0.127
 
 [workers]
-worker1 ansible_host=192.168.0.145
-worker2 ansible_host=192.168.0.146
+worker01 ansible_host=192.168.0.132
 ; worker2 ansible_host=192.168.0.131
