--- a/inverntory.ini
+++ b/inverntory.ini
@@ -10,17 +10,19 @@ ansible_ssh_user=root
 ansible_ssh_pass=vagrant
 host_key_checking = false
 
-[workers:vars]
+[all:vars]
 ansible_connection=ssh
-ansible_ssh_user=vagrant
+ansible_ssh_user=root
 ansible_ssh_pass=vagrant
 host_key_checking = false
 
 [init-master]
-master01 ansible_host=192.168.0.116
+; master01 ansible_host=192.168.0.116
 
 [masters]
-master01 ansible_host=192.168.0.116
+localhost.localdomain ansible_host=192.168.0.116
+; slave ansible_host=192.168.0.132
+; slave2 ansible_host=192.168.0.119
 ; master02 ansible_host=192.168.0.130
 ; master03 ansible_host=192.168.0.131
 
@@ -28,5 +30,21 @@ master01 ansible_host=192.168.0.116
 ; master2 ansible_host=192.168.0.127
 
 [workers]
-worker01 ansible_host=192.168.0.132
+slave ansible_host=192.168.0.132
+slave2 ansible_host=192.168.0.119
+
 ; worker2 ansible_host=192.168.0.131
+
+[remove-node]
+; localhost.localdomain ansible_host=192.168.0.116
+; slave ansible_host=192.168.0.132
+slave2 ansible_host=192.168.0.119
+
+[new-node]
+slave2 ansible_host=192.168.0.119
+
+
+[k8s_cluster]
+localhost.localdomain
+slave
+slave2
