--- a/roles/kubernetes/node-label/tasks/main.yml
+++ b/roles/kubernetes/node-label/tasks/main.yml
@@ -10,18 +10,6 @@
   delay: 6
   when: inventory_hostname == groups['masters'][0]
 
-- name: Set role node label to empty list
-  ansible.builtin.set_fact:
-    role_node_labels: []
-
-- name: Node label for nvidia GPU nodes
-  ansible.builtin.set_fact:
-    role_node_labels: "{{ role_node_labels + ['nvidia.com/gpu=true'] }}"
-  when:
-    - nvidia_gpu_nodes is defined
-    - nvidia_accelerator_enabled | bool
-    - inventory_hostname in nvidia_gpu_nodes
-
 - name: Set inventory node label to empty list
   ansible.builtin.set_fact:
     inventory_node_labels: []
@@ -42,7 +30,9 @@
 
 - name: Set label to node
   ansible.builtin.command: >-
-    {{ kubectl }} label node {% if kube_override_hostname %}{{ kube_override_hostname }}{% else %}{{ inventory_hostname }}{% endif %} {{ item }} --overwrite=true
+    kubectl label node {{ kube_override_hostname | default(inventory_hostname) }} {{ item }} --overwrite=true
   loop: "{{ role_node_labels + inventory_node_labels }}"
   delegate_to: "{{ groups['masters'][0] }}"
   changed_when: false
+  when:
+    - (role_node_labels + inventory_node_labels) | length > 0
