--- a/inverntory.ini
+++ b/inverntory.ini
@@ -20,7 +20,7 @@ host_key_checking = false
 ; master01 ansible_host=192.168.0.116
 
 [masters]
-localhost.localdomain ansible_host=192.168.0.116
+cpp ansible_host=192.168.0.120
 ; slave ansible_host=192.168.0.132
 ; slave2 ansible_host=192.168.0.119
 ; master02 ansible_host=192.168.0.130
@@ -30,21 +30,19 @@ localhost.localdomain ansible_host=192.168.0.116
 ; master2 ansible_host=192.168.0.127
 
 [workers]
-slave ansible_host=192.168.0.132
-slave2 ansible_host=192.168.0.119
+slave1 ansible_host=192.168.0.122
+; slave2 ansible_host=192.168.0.119
 
 ; worker2 ansible_host=192.168.0.131
 
 [remove-node]
-; localhost.localdomain ansible_host=192.168.0.116
-; slave ansible_host=192.168.0.132
-slave2 ansible_host=192.168.0.119
+slave1 ansible_host=192.168.0.132
+cp ansible_host=192.168.0.120
 
 [new-node]
-slave2 ansible_host=192.168.0.119
 
 
 [k8s_cluster]
-localhost.localdomain
-slave
+cp
+slave1
 slave2
